# camsrv

./: .gitignore  .gitmodules  .rtd-environment.yml  .travis.yml  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.dev.yml  docker-compose.f5dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: camsrv-tests.yml  docker.yml
camsrv/: __init__.py  camsrv.py  conftest.py  f5wfs.py  f5wfs_camera.py  f5wfs_hardware.py  f9wfs.py  header.py  matcam.py  ratcam.py
camsrv/data/: f5_mask.fits
camsrv/tests/: test_apps.py
camsrv/web_resources/templates/: f5wfs.html  f9wfs.html  helpme.html  js9  matcam.html  ratcam.html  restart.html  sim.html
docs/: conf.py  index.rst
docs/matcam/: index.rst
licenses/: LICENSE.rst  README.rst
matcam/: __init__.py  matcam.py
mmtcam/: matcam.py
notebooks/: MMT API.ipynb
scripts/: f9wfs.py  matcam.py  ratcam.py  sim.py
templates/: js9.html  matcam.html
